# data

./: README.md  requirements.txt  supervisord.conf
basecode/: pyproject.toml
basecode/config/: app.py  database.py  logging.py  mail.py  spider.py
basecode/database/: User.py  __init__.py
basecode/database/Contracts/: IMigration.py
basecode/src/: ___main___.py
basecode/src/Console/Commands/: ExtractApiCommand.py  ExtractWebCommand.py  MigrationDownCommand.py  MigrationUpCommand.py  ReplExtractCommand.py  ScheduleExtractCommand.py
basecode/src/Console/Commands/Concerns/: ApiExtraction.py  WebExtraction.py
basecode/src/Extraction/: scrapy.cfg
basecode/src/Extraction/Api/: ApiData.py  __init__.py
basecode/src/Extraction/Api/Contracts/: IApi.py
basecode/src/Extraction/Web/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
basecode/src/Extraction/Web/Spiders/: WebData.py
basecode/src/Helpers/: Database.py  DatabaseNameSpace.py  LogNameSpace.py  ReportNameSpace.py
logs/: .gitignore
